feat: Implement ADR-0005 for auto-initialization of MCP servers
- Added asynchronous server initialization during daemon startup.
- Introduced logging for initialization processes and results.
- Enhanced server command building to support arguments.
- Implemented health monitoring for auto-started servers, with automatic restarts on failure.
- Updated daemon status reporting to include information on auto-started and on-demand servers.
- Added configuration validation for new fields related to auto-start functionality.
- Created comprehensive unit tests for initialization logic, configuration validation, and health monitoring.
- Updated dependencies to include pytest-asyncio for testing asynchronous code.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.uv]
-dev-dependencies = ["pytest>=7.0", "pytest-mock>=3.0"]
+dev-dependencies = ["pytest>=7.0", "pytest-mock>=3.0", "pytest-asyncio>=0.21.0"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
@@ -60,7 +60,11 @@ markers = [
   "slow: Tests that take longer to run",
   "socket: Tests requiring Unix socket operations",
   "daemon: Tests requiring daemon functionality",
+  "asyncio: Tests using asyncio",
 ]
+
+# Asyncio configuration
+asyncio_mode = "auto"
 
 # Coverage options
 [tool.coverage.run]
