feat: Implement ADR-0007 to drop legacy commands and modernize entry points
- Added ADR-0007 documentation detailing the deprecation timeline and migration steps for dropping legacy commands.
- Created migration guide (MIGRATION.md) for users transitioning from legacy scripts to the modern `cllm-mcp` command.
- Updated README to reflect changes and provide installation instructions for the new command structure.
- Removed legacy scripts (`mcp_cli.py`, `mcp_daemon.py`) from the project and updated package configuration to reflect the new entry points.
- Refactored legacy code into internal modules within the `cllm_mcp` package.
- Updated CI/CD workflows to use the new command structure.
- Added example configuration file for using the new command structure in Cllmfile.yml.
- Adjusted coverage settings in `pyproject.toml` to exclude legacy scripts.
- Bumped version of `mcp-cli` in `uv.lock` to reflect changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ asyncio_mode = "auto"
 
 # Coverage options
 [tool.coverage.run]
-source = ["cllm_mcp", "mcp_cli", "mcp_daemon"]
+source = ["cllm_mcp"]
 branch = true
 omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]
 
